--- a/Exercício Avaliativo 02 - JavaScript/Questao_01/stylePaginaWeb.css
+++ b/Exercício Avaliativo 02 - JavaScript/Questao_01/stylePaginaWeb.css
@@ -23,6 +23,7 @@ header {
     padding: 8px;
     margin: 4px;
 }
+
 #AlinhamentoPrincipal {
     width: 1400px;
 }
@@ -44,10 +45,41 @@ nav {
 main {
     color: #000000;
     background-color: #ffffff;
+    background-image: url("https://uploaddeimagens.com.br/images/002/590/520/original/Screenshot_1.png?1586956601");
+    background-repeat: no-repeat;
+    background-position: top center;
     border: 4px solid #000000;
-    height: 100px;
+    height: 120px;
     margin: 4px;
     margin-top: 8px;
     margin-bottom: 8px;
     padding: 8px;
+}
+
+.menuNav ul li {
+    display: inline-block;
+    text-align: center;
+    width: 200px;
+    height: 50px;   
+    line-height: 50px; 
+    font-size: 22px;
+    position: relative;
+}
+
+.menuNav ul{
+    padding: 0;
+}
+
+.menuNav ul li:hover{
+    background-color: #9c560681;
+}
+
+.menuNav ul ul {
+    background-color: #f38609ef;
+    display: none;
+}
+
+.menuNav ul li:hover > ul{
+    display: block;
+    position: absolute;
 }
