--- a/Exercício Avaliativo 02 - JavaScript/Questao_01/stylePaginaWeb.css
+++ b/Exercício Avaliativo 02 - JavaScript/Questao_01/stylePaginaWeb.css
@@ -83,3 +83,9 @@ main {
     display: block;
     position: absolute;
 }
+
+a {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    text-decoration: none;
+}
