--- a/Trabalho T2/Parte 02/styleMain.css
+++ b/Trabalho T2/Parte 02/styleMain.css
@@ -98,3 +98,17 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+
+/* Tabela Abrigos */
+.text-center {
+    text-align: center;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+table {
+    border: 1px solid rgb(255, 255, 255);
+}
+
+table td {
+    border: 1px solid rgb(255, 255, 255);
+}
