--- a/Trabalho T2/Parte 02/styleMain.css
+++ b/Trabalho T2/Parte 02/styleMain.css
@@ -1,3 +1,4 @@
+/* Body */
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
@@ -12,6 +13,7 @@ body {
     align-content: space-around;
 }
 
+/* Header */
 header {
     font-size: 30px;
     text-align: center;
@@ -32,6 +34,7 @@ button.LoginBT {
     background-image: url("https://uploaddeimagens.com.br/images/002/664/936/original/Button-Login.png?1590106130");
 }
 
+/* Nav's */
 .menuNavSUP ul li {
     display: inline-block;
     text-align: center;
@@ -44,12 +47,12 @@ button.LoginBT {
 
 .menuNavINF ul li {
     background-color: #4B0202;
-    top: -13px;
+    top: -11px;
     display: inline-block;
     text-align: center;
     width: 200px;
-    height: 50px;   
-    line-height: 50px; 
+    height: 60px;  
+    line-height: 60px; 
     font-size: 22px;
     position: relative;
 }
@@ -82,14 +85,12 @@ button.LoginBT {
 
 .menuNavINF ul ul {
     background-color: #4B0202;
-    text-align: center;
     position: absolute;
     display: none;
 }
 
 .menuNavINF ul li:hover > ul{
     display: block;
-    position: absolute;
     top: 55px;
 }
 
@@ -99,16 +100,70 @@ a {
     text-decoration: none;
 }
 
-/* Tabela Abrigos */
-.text-center {
+/* Main */
+main {
+    width: 1600px;
+    height: auto;
+    margin-top: -27px;
+    background-image: url("https://uploaddeimagens.com.br/images/002/678/532/original/Background-Rain2.gif?1590763768");
+    background-size: 1600px 900px;
+    background-repeat: no-repeat;
+    background-position: top center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+    -moz-box-shadow:inset 0px 0px 8px 5px #000000;
+    -webkit-box-shadow:inset 0px 0px 8px 5px #000000;
+    box-shadow:inset 0px 0px 8px 5px #000000;
+}
+
+/* Footer */
+footer {
+    background-color: #4B0202;
+    margin-bottom: -20px;
+    font-size: 20px;
     text-align: center;
-    border: 1px solid rgb(255, 255, 255);
+    width: 1920px;
+    height: 150px;
+    padding: 8px;
+    margin-top: 50px;
 }
 
+/* Tabela Abrigos */
 table {
-    border: 1px solid rgb(255, 255, 255);
+    padding: 5px;
+    background-color: #4B0202;
 }
 
-table td {
-    border: 1px solid rgb(255, 255, 255);
+thead {
+    font-size: 20px;
+}
+
+.text-center table td {
+    background-color: #4B0202;
+    text-align: center;
+}
+
+table tr td{
+    border: 2px solid #4B0202;
+} 
+
+table tr td:hover{
+    border: 2px solid black;
+} 
+
+/* Forecasting */
+#forecasting {
+    margin-top: 150px;
+    width: 1000px;
+    height: 500px;
+}
+
+/* Maps */
+#GoogleMaps {
+    margin-top: 150px;
+    width: 1000px;
+    height: 500px;
 }
