--- a/Trabalho T2/Parte 02/styleMain.css
+++ b/Trabalho T2/Parte 02/styleMain.css
@@ -17,14 +17,9 @@ body.Login {
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
     background-color: #000000;
-    background-image: url("https://uploaddeimagens.com.br/images/002/679/740/original/BackGroudLogin.png?1590786864");
+    background-image: url("https://uploaddeimagens.com.br/images/002/680/772/original/BackGroudLogin.png?1590821666");
     background-repeat: no-repeat;
     background-position: top left;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: space-around;
 }
 
 /* Header */
@@ -212,11 +207,72 @@ table.tableAbrigos {
 
 /* Login */
 div.LoginPanel {
-    background-color: rgb(85, 85, 85);
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-around;
+    background-color: rgb(46, 43, 43);
     position: absolute;
     right: 0px;
     top: 0px;
-    text-align: center;
-    width: 650px;
+    width: 700px;
     height: 1080px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+h3.T1 {
+    font-size: 30px;
+}
+
+input.form-control {
+    width: 450px;
+    height: 50px;  
+    margin-top: 4px; 
+    margin-bottom: 4px;
+} 
+
+div.checkedAlig {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+}
+
+input[type=checkbox] {
+    zoom: 1.5;
+    margin-left: 0px;
+}
+
+label {
+    margin-top: 3px;
+}
+
+a.float-right {
+    margin-top: 10px;
+    margin-left: 260px;
+}
+
+a.float-left {
+    margin-top: 100px;
+    margin-left: 0px;
+}
+
+button.AcessarBtn {
+    font-size: 20px;
+    margin-top: 30px;
+    width: 200px;
+    height: 50px;  
+}
+
+::placeholder {
+    padding: 5px;
+    color: rgba(0, 0, 0, 0.637);
+    font-size: 20px;
 }
