--- a/Trabalho T2/Parte 02/styleMain.css
+++ b/Trabalho T2/Parte 02/styleMain.css
@@ -276,3 +276,86 @@ button.AcessarBtn {
     color: rgba(0, 0, 0, 0.637);
     font-size: 20px;
 }
+
+#username {
+    padding: 5px;
+    color: rgba(0, 0, 0, 0.637);
+    font-size: 20px;
+}
+
+#password {
+    padding: 5px;
+    color: rgba(0, 0, 0, 0.637);
+    font-size: 20px;
+}
+
+#verificaSenha {
+    background-color: rgba(255, 0, 0, 0.116);
+    border: 2px solid rgb(161, 3, 3);
+    text-align: center;
+    padding: 10px;
+}
+
+div.verificaSenha:empty {
+    display: none
+}
+
+/* Tela de Formulario */
+div.formulario {
+    position: relative;
+    margin-top: 100px;
+    background-color: #4B0202;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-around;
+    width: 1000px;
+    height: 600px;
+    padding: 8px;
+}
+
+.scrollabletextbox {
+    width: 450px;
+    height: 200px;  
+    margin-top: 4px; 
+    margin-bottom: 4px;
+    padding: 5px;
+    color: rgba(0, 0, 0, 0.637);
+    font-size: 20px;
+    overflow:scroll;
+}
+
+button.FormBTNS {
+    font-size: 20px;
+    margin-top: 30px;
+    width: 150px;
+    height: 50px;  
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+div.BtnsForm {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+    align-items: center;
+    justify-content: center;
+}
+
+div.CamposForm {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-around;
+}
+
+h2.obrigatorios {
+    font-size: 15px;
+    position: absolute;
+    right: 40px;
+    top: 20px;
+}
